--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           Date of Birth
           <input type="date" name="dob" />
         </label>
-        <label
-          >Unknown birthday
+        <label>
+          Unknown birthday
           <input type="checkbox" name="unknown" />
         </label>
         <label>
