--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
         <label>
           Real Name
           <input type="password" name="real_name" required />
+          <p>Please provide the Real Name of the superhero</p>
         </label>
         <label>
           Alias
           <input type="text" name="alias" required />
+          <p>
+            You cannot have a hero without a name, right? Please fill it in
+          </p>
         </label>
         <label>
           Date of Birth
