--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </label>
         <fieldset>
           <legend>Powers</legend>
+          <p class="hidden">Please select at least one power</p>
           <ul>
             <li>
               <label>
