getting as well

--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
 
         <input type="submit" value="Save" />
       </form>
+      <template>
+        <article>
+          <header>
+            <h2>ALIAS</h2>
+            <h3>a.k.a <span>REAL</span></h3>
+          </header>
+          <h3>Powers</h3>
+          <ul></ul>
+        </article>
+      </template>
+      <div id="herolist"></div>
     </main>
     <script src="main.js"></script>
   </body>
