--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
         <input type="submit" value="Save" />
       </form>
       <template>
-        <article>
+        <article data-id>
           <header>
             <h2>ALIAS</h2>
             <h3>a.k.a <span>REAL</span></h3>
           </header>
           <h3>Powers</h3>
           <ul></ul>
+          <button data-action="delete" class="delete" data-id>Delete</button>
         </article>
       </template>
       <div id="herolist"></div>
